# magic-simulator

./: .gitignore  CMakeLists.txt  README.md  build.bat  cfg.txt
include/: common.hpp
src/: main.cpp
